--- a/paper/pres/poster-dkt.tex
+++ b/paper/pres/poster-dkt.tex
@@ -163,10 +163,10 @@
 %%%Column1
 \vspace{-3em}
 
-\heading{Aim}\;\;\;\;Infer progression of multimodal biomarkers in rare neurodegenerative diseases (NDs) by leveraging larger datasets of common NDs.
+\heading{Aim:}\;\;\;\;Infer progression of multimodal biomarkers in rare neurodegenerative diseases (NDs) by leveraging larger datasets of common NDs.
 
 
-\heading{Why}\;\;\;\;Posterior Cortical Atrophy (PCA): progression of \underline{multimodal} biomarkers not known $\rightarrow$ Identify outcome measures and suitable subjects for PCA clinical trials
+\heading{Why:}\;\;\;\;Posterior Cortical Atrophy (PCA): progression of \underline{multimodal} biomarkers not known $\rightarrow$ Identify outcome measures and suitable subjects for PCA clinical trials.
 
 \columnbreak
 
@@ -206,8 +206,8 @@
 \heading{1. Intuition}
 
 \begin{itemize}
- \item Diseases affect different brain regions un-equally, but underlyining mechanisms are the same (amyloid cascade)
- \item \textbf{Idea:} each brain region follows ``its own disease course'', common across diseases $\rightarrow$ dysfunction score
+ \item Diseases affect different brain regions un-equally, but underlyining mechanisms are the same (amyloid cascade).
+ \item \textbf{Idea:} each brain region follows ``its own disease course'', common across diseases.
 \end{itemize}
 
 \begin{figure}[H]
